--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   </head>
   <body class="page">
     <header class="header page-content">
-      <h1 class="heading">&lt;/HTML&gt;</h1>
-      <h2 class="heading-description">закрывающий тег</h2>
+      <div class="heading"><a href="">&lt;/HTML&gt;</a></div>
+      <h1 class="heading-description">закрывающий тег</h1>
       <nav class="theme-menu header__theme-menu">
         <!-- Не меняйте разметку этого списка, иначе скрипты перестанут работать -->
         <ul class="theme-menu__list">
@@ -50,9 +50,9 @@
     </header>
     <main class="main page-content">
       <article class="card">
-        <h3 class="card-title border-btm">
+        <h2 class="card-title border-btm">
           Фритрек и нулевой спринт: Подготовка к работе
-        </h3>
+        </h2>
 
         <img
           src="./images/image_big.png"
@@ -71,7 +71,7 @@
         </div>
         <footer class="article-footer">
           <!-- inline svg heart icon -->
-          <button class="card__icon-button">
+          <button type="button" class="card__icon-button">
             <svg
               class="like-icon"
               width="39"
@@ -106,24 +106,25 @@
               </g>
             </svg>
           </button>
-          <button class="card__like-button btn">
+          <button class="card__like-button btn" type="button">
             <span class="button__text">Like</span>
           </button>
         </footer>
       </article>
-    </main>
-    <footer class="page-footer">
-      <!-- <svg style="border: 1px solid red;"  viewBox="0 0 29 28">
-        <use href="./svg/floppy-symbol.svg#floppy">
-  </svg> -->
+      <div class="page-footer">
+        <!-- <svg style="border: 1px solid red;"  viewBox="0 0 29 28">
+          <use href="./svg/floppy-symbol.svg#floppy">
+    </svg> -->
 
-      <button class="save-memories-button btn">
-        <svg viewBox="0 0 21 21" class="icon-floppy">
-          <use href="./svg/floppy.svg#floppy-1" />
-        </svg>
-        <span class="save-memories-txt">Сохранить на память</span>
-      </button>
-    </footer>
+        <button class="save-memories-button btn" type="button">
+          <svg viewBox="0 0 21 21" class="icon-floppy">
+            <use href="./svg/floppy.svg#floppy-1" />
+          </svg>
+          <span class="save-memories-txt">Сохранить на&nbsp;память</span>
+        </button>
+      </div>
+    </main>
+
     <script src="./scripts/set-theme.js"></script>
     <script src="./scripts/like.js"></script>
   </body>
