Part 1 - final corrections (after review 2)

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
   </head>
   <body class="page">
     <header class="header page-content">
-      <div class="heading"><a href="">&lt;/HTML&gt;</a></div>
+      <div class="heading">
+        <a class="heading-link">&lt;/HTML&gt;</a>
+      </div>
       <h1 class="heading-description">закрывающий тег</h1>
       <nav class="theme-menu header__theme-menu">
         <!-- Не меняйте разметку этого списка, иначе скрипты перестанут работать -->
